--- a/public/m/less/search.less
+++ b/public/m/less/search.less
@@ -1,3 +1,58 @@
-
 @import 'base.less';
-
+#main {
+    .search-form {
+        padding: 10px;
+        position: relative;
+        input {
+            margin-bottom: 0;
+            height: 30px;
+            background-color: #fff;
+            border: 1px solid @mainColor;
+            text-align: left;
+        }
+        .btn-search {
+            width: 60px;
+            height: 30px;
+            position: absolute;
+            right: 10px;
+            top: 10px;
+            color: #fff;
+            background-color: @mainColor;
+            border: none;
+        }
+    }
+    .history {
+        padding: 0 10px;
+        .title {
+            line-height: 30px;
+            height: 30px;
+            font-size: 14px;
+            p{
+                margin-bottom: 0;
+            }
+        }
+        .content {
+            >ul {
+                >li {
+                    line-height: 40px;
+                    height: 40px;
+                    border: 1px solid #ccc;
+                    position: relative;
+                    >a {
+                        display: block;
+                        font-size: 14px;
+                        padding-left: 5px;
+                    }
+                    >i{
+                        position: absolute;
+                        top: 11px;
+                        right: 5px;
+                    }
+                    &:nth-child(n+2){
+                        border-top: none;
+                    }
+                }
+            }
+        }
+    }
+}
